<resources>
    <string name="app_name">KittenBot</string>
    <string name="type_hint">Type message...</string>
    <string name="botName">Mr Kittenbot</string>
    <string name="welcome">Welcome!</string>
    <string name="instruction1">Mr. Kittenbot learns from people.</string>
    <string name="instruction2">Using appropriate language is important.</string>
    <string name="welcome2">Please note!</string>
    <string name="instruction3">Things it says may seem inappropriate.</string>
    <string name="instruction4">Use with discretion.</string>
    <string name="welcome3">Parental advice</string>
    <string name="instruction5">Whatever it says,</string>
    <string name="instruction6">visitors never talk to a human.</string>
    <string name="btnStart">let\'s start</string>
    <string name="doubleTap">Double tap Mr. Kittenbot</string>
    <string name="instruction7">to start a conversation!</string>
    <string name="infoTV">Choose a color</string>
    <string name="backArrowImg">back</string>
    <string name="doubleTapImg">Double tap to start chatting</string>
    <string name="blueIV">blue chat color</string>
    <string name="greenIV">green chat color</string>
    <string name="orangeIV">orange chat color</string>
    <string name="purpleIV">purple chat color</string>
    <string name="redIV">red chat color</string>
    <string name="saveBtn">SAVE</string>
    <string name="cancelBtn">Cancel</string>
</resources>
