<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img1"
            android:layout_marginTop="@dimen/img1Top"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/kitten_board1"
            android:layout_width="@dimen/img1Width"
            android:layout_height="@dimen/img1Height" />
        <TextView
            android:id="@+id/tv1"
            android:layout_marginTop="@dimen/tv1Top"
            android:text="@string/welcome"
            android:textSize="@dimen/tv1Text"
            android:textColor="@color/whiteText"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv2"
            android:textColor="@color/whiteText"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tv2Top"
            android:textSize="@dimen/tv2Text"
            android:text="@string/instruction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv3"
            android:textColor="@color/whiteText"
            android:layout_gravity="center"
            android:textSize="@dimen/tv3Text"
            android:text="@string/instruction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>