<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activeacademy.com.kittenbot.SettingsActivity">
    <LinearLayout
        android:id="@+id/coloredLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@color/chatBlue"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/doubleTapImage"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/double_tap_kitten"
            android:layout_width="130dp"
            android:layout_height="115dp"
            android:contentDescription="@string/doubleTapImg" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/doubleTap"
            android:layout_gravity="center"
            android:textColor="@color/whiteText"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:text="@string/instruction7"
            android:layout_gravity="center"
            android:textColor="@color/whiteText"
            android:layout_height="20dp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/settingsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
    />
</LinearLayout>
